Swapping SadBoat image for HTML SVG

--- a/style/main.css
+++ b/style/main.css
@@ -5,8 +5,9 @@
 }
 .logo
 {
-    padding-left:12.50%;
-    width:20%;
+    padding-left:8.00%;
+    padding-top:0;
+    width:28.5%;
     float:left;
 }
 
