Changing px to em

--- a/style/footer.css
+++ b/style/footer.css
@@ -15,7 +15,7 @@
     margin-top:-1%;
     background-color:#503A82;
     padding-bottom:5%;
-    height:200px;
+    height:9em;
     bottom:-5%;
     margin-bottom:-6%;
     z-index:-1;
