--- a/style/column.css
+++ b/style/column.css
@@ -17,7 +17,7 @@
 .cbh
 {
     width:100%;
-    padding-top:5px;
+    padding-top:0.125em;
     background-color:white;
 }
 .cbc
@@ -26,7 +26,7 @@
     margin-left:5%;
     margin-right:5%;
     margin-top:2%;
-    height:210px;
+    height:15em;
 }
 .cbp1
 {
@@ -54,5 +54,5 @@
     position: static;
     margin-left: 3%;
     margin-bottom: 3%;
-    letter-spacing:1.5px;
+    letter-spacing:0.03em;
 }
