--- a/style/footer.css
+++ b/style/footer.css
@@ -1,5 +1,6 @@
 .footer{
     width:110%;
+    max-width: 100vw;
     margin-left:-9.6%;
     margin-top: 22.5%;
     background-color: #28AE9F;
@@ -23,7 +24,7 @@
 .legalcontents
 {
     padding-top:10%; 
-    padding-right:3%;
+    padding-right:3vw;
     z-index:1; 
     text-align: center;
 }
