--- a/style/main.css
+++ b/style/main.css
@@ -1,27 +1,68 @@
-.main
+.highlight
+{
+    background-color: yellow;
+}
+
+
+*
+{
+    outline: 0.0vw solid red;
+    font-family: 'Roboto', sans-serif;
+    font-size: 2vh;
+    letter-spacing: 0.1vh;
+}
+
+h1
+{
+    font-size: 4vh;
+}
+
+.rule{
+    width:75%;
+    height:0.125vh;
+    margin-left: 12.5%;
+
+    border-radius: 1em;
+    z-index: 1;
+    bottom: 0;
+
+    background-color: #000000;
+    border: 0 none;  
+}
+
+.realCurve
+{
+    position: relative;
+    z-index: 0;
+}
+
+.bWhite
+{
+    background-color: white;
+    color:black;
+    z-index: 2;
+}
+
+.bTeal
 {
     background-color: #28AE9F;
-    font-family: 'Roboto', sans-serif;
-}
-.logo
-{
-    padding-left:8.00%;
-    padding-top:0;
-    width:28.5%;
-    float:left;
+    color:black;
 }
 
-.filler
+.bPurple
 {
-    padding-top: 600px;
-    padding-right: 30px;
-    padding-bottom: 200px;
-    padding-left: 30px;
+    background-color: #503A82;
+    color:white;
 }
 
-body
+.bDPurple, .navLinkLogo:hover, .navDrop:hover, .navDropContent:hover, .navLink:hover, .footerLink:hover
 {
-    max-width:100vw;
-    max-zoom:100vw;
+    background-color: #201835;
+    color:white;
+}
+
+@viewport {
+    max-zoom: 1.0;
+    min-zoom: 1.0;
 }
 
