--- a/style/desktop.css
+++ b/style/desktop.css
@@ -21,6 +21,10 @@
         visibility: hidden;
     }
 
+    .logo{
+        width: 15vw;
+    }
+
     .navLinkLogo
     {	
         width: 7vw;
@@ -32,6 +36,7 @@
         height:3vh;
         padding-top:1vh;
         padding-bottom:1vh;
+        cursor:pointer;
     }
     .navFiller
     {
@@ -49,6 +54,7 @@
         width: 30vw;
         height: 30vh;
     }
+
 
     .pageSection
     {
@@ -73,7 +79,7 @@
 
     .cardBack
     {
-        width: 25vw; 
+        width: 24vw; 
         height: 30vh;
         z-index: 2;
     }
@@ -115,8 +121,11 @@
         line-height: 1.0;
         
     }
- 
 
+    .cardLine
+    {
+        width:0.25vw;
+    }
 
     .footerCurve
     {
@@ -140,6 +149,7 @@
         width: 10vw;
         height:8vh;
         z-index: 1;
+        cursor: pointer;
     }
     .footerFiller
     {
