--- a/style/mobile.css
+++ b/style/mobile.css
@@ -26,6 +26,7 @@
 
                 .logo{
                     width:100%;
+                    padding-bottom:3vh;
                 }
 
                 .navLinkLogo
