--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,6 +1,5 @@
 .footer
 {
-    position:fixed;
     height:20vh;
     width:100vw;
 }
@@ -10,4 +9,14 @@
     background-color: #503A82;
     margin-top: -1vh;
     height:10vh;
+}
+
+.footerButton
+{
+    float: right;
+    margin-top: 2.1vh;
+    margin-left: 2vw;
+    margin-right: 2vw;
+    width: 5vw;
+    font-size: 0.7vw;
 }
