--- a/styles/includer.css
+++ b/styles/includer.css
@@ -1,3 +1,5 @@
+/*  index.html content classes  */
+/*------------------------------*/
 .included
 {
     width:100vw;
@@ -13,17 +15,20 @@
     height: 74vh;
 }
 
+/*      home.html classes       */
+/*------------------------------*/
 .splashBlurb
 {
     margin-top:8.5vh;
 }
 
+/*Infocards*/
 .card
 {
     width: 23vw;
     height: 30vh;
 
-    margin-top: 10vh;    
+    margin-top: 0vh;    
     margin-left:5vw;
     margin-right:5vw;
 
@@ -40,3 +45,56 @@
     margin-top: 2vh;
     margin-left: 0.5vw;
 }
+
+.logo
+{
+    width: 20vw;
+    margin-top: 0vh;
+    margin-left:15vw;
+}
+
+.motto
+{
+    font-size: 3vw;
+}
+
+/*      about.html classes      */
+/*------------------------------*/
+.about
+{
+    width: 100vw;
+    height: 100vh;
+    
+    margin-top: 8.5vh;
+    margin-left: 3vw;
+    margin-right: 3vw;
+}
+
+li
+{
+    margin-top: 3vh;    
+}
+
+/*      contact.html classes    */
+/*------------------------------*/
+.contact
+{
+    width: 100vw;
+    height: 100vh;
+    
+    margin-top: 8.5vh;
+    margin-left: 3vw;
+    margin-right: 3vw;
+}
+
+/*      copyright.html classes  */
+/*------------------------------*/
+
+/*      legal.html classes      */
+/*------------------------------*/
+
+/*      news.html classes       */
+/*------------------------------*/
+
+/*      store.html classes      */
+/*------------------------------*/
