--- a/styles/includer.css
+++ b/styles/includer.css
@@ -90,6 +90,11 @@ li
 /*      copyright.html classes  */
 /*------------------------------*/
 
+.copyright
+{
+    
+}
+
 /*      legal.html classes      */
 /*------------------------------*/
 
