--- a/styles/includer.css
+++ b/styles/includer.css
@@ -100,11 +100,17 @@ li
     margin-right: 3vw;
 }
 
-/*      legal.html classes      */
-/*------------------------------*/
-
 /*      news.html classes       */
 /*------------------------------*/
 
 /*      store.html classes      */
 /*------------------------------*/
+.store
+{
+    width: 94vw;
+    height: 100vh;
+    
+    margin-top: 8.5vh;
+    margin-left: 3vw;
+    margin-right: 3vw;
+}
