--- a/styles/includer.css
+++ b/styles/includer.css
@@ -102,6 +102,15 @@ li
 
 /*      news.html classes       */
 /*------------------------------*/
+.news
+{
+    width: 94vw;
+    height: 100vh;
+    
+    margin-top: 8.5vh;
+    margin-left: 3vw;
+    margin-right: 3vw;
+}
 
 /*      store.html classes      */
 /*------------------------------*/
