--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,6 +1,6 @@
 .footer
 {
-    height:20vh;
+    height:200vh;
     width:100vw;
 }
 
@@ -8,7 +8,7 @@
 {
     background-color: #503A82;
     margin-top: -1vh;
-    height:10vh;
+    height:190vh;
 }
 
 .footerButton
@@ -17,6 +17,7 @@
     margin-top: 2.1vh;
     margin-left: 2vw;
     margin-right: 2vw;
+    margin-bottom:180vh;
     width: 7vw;
     font-size: 0.7vw;
 }
